--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="txtLoginRegister">#0048FF</color>
+    <color name="txtHint">#686868</color>
+    <color name="txtBtn">#fff</color>
+    <color name="btnLogin">#F35347</color>
+    <color name="btnRegister">#667A88</color>
+    <color name="colorWhite">#fff</color>
+    <color name="colorBlack">#000000</color>
 </resources>
