--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -12,5 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@mipmap/imagem_splash_foreground" />
+        android:src="@mipmap/imagem_splash_foreground"
+        android:contentDescription="Splash Screen Image"/>
 </LinearLayout>
