--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="btnSecundario">#667A88</color>
     <color name="colorWhite">#fff</color>
     <color name="colorBlack">#000000</color>
+    <color name="colorAddress">#6A6A6A</color>,
+    <color name="colorHour">#6A6A6A</color>
 </resources>
