Colocando imagens na Home

--- a/app/src/main/res/layout/item_lista.xml
+++ b/app/src/main/res/layout/item_lista.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:scaleType="centerCrop"
-            android:src="@mipmap/tony_romas" />
+            android:src="@drawable/tony" />
 
         <TextView
             android:id="@+id/listRestaurantName"
