--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="colorBlack">#000000</color>
     <color name="colorAddress">#6A6A6A</color>,
     <color name="colorHour">#6A6A6A</color>
+    <color name="cardBackground">#6A6A6A</color>
 </resources>
