--- a/app/src/main/res/layout/item_lista.xml
+++ b/app/src/main/res/layout/item_lista.xml
@@ -16,9 +16,10 @@
         <ImageView
             android:id="@+id/restaurantImage"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="180dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/tony" />
+            android:src="@drawable/aoyama"
+            tools:ignore="MissingConstraints" />
 
         <TextView
             android:id="@+id/listRestaurantName"
