--- a/app/src/main/res/layout/item_lista_detail.xml
+++ b/app/src/main/res/layout/item_lista_detail.xml
@@ -1,35 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    android:orientation="horizontal"
-    app:cardCornerRadius="10dp">
+    android:layout_height="match_parent"
+    android:background="@color/colorWhite"
+    android:orientation="vertical"
+    android:padding="10dp"
+    tools:context=".RestaurantDetail">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ImageView
+        android:id="@+id/imgRestauranteDetalhes"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="100dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/tony" />
 
-        <ImageView
-            android:id="@+id/imgPrato"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/tony" />
+    <TextView
+        android:id="@+id/txtNomeRestaurante"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/nome_restaurante"
+        android:textSize="36dp" />
 
-        <TextView
-            android:id="@+id/txtPrato"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
-            android:ellipsize="end"
-            android:text="Nome"
-            android:textColor="@color/colorWhite"
-            android:textSize="25dp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@id/imgPrato" />
+    <TextView
+        android:id="@+id/txtPratosPrincipais"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/pratos_principais"
+        android:textSize="36dp" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.cardview.widget.CardView>
+</LinearLayout>
